# rgbd-tracking-evaluation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dataset-format.md
dockerfiles/: Dockerfile-ubuntu-16-04  test-build.sh  test-run.sh
src/: dvo_track.cpp  fovis_track.cpp  ocv_track.cpp
tooling/: README.md  associate.py  evaluate_ate.py  evaluate_rpe.py
tooling-batch-run/: icl-nuim.txt  make-associations.sh  track.sh  tum-rgbd-fr1.txt  tum-rgbd-fr2.txt  tum-rgbd-fr3.txt
tooling-rs/: Cargo.toml
